// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic extend composed with project 1`] = `
TableRep {
  "rowData": [
    {
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "_depth": 0,
    },
    {
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "_depth": 0,
    },
    {
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "_depth": 0,
    },
    {
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "_depth": 0,
    },
    {
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "_depth": 0,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "_depth": {
        "columnType": "INTEGER",
        "displayName": "_depth",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Job Family",
      "TCOE",
      "_depth",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`basic extend with const col 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_rid": 0n,
    },
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_rid": 1n,
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_depth": 0,
      "_rid": 3n,
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_rid": 5n,
    },
    {
      "Base": 152125n,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_rid": 11n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_depth": {
        "columnType": "INTEGER",
        "displayName": "_depth",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
      "_depth",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`basic filter 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 0n,
    },
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 1n,
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_rid": 3n,
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_rid": 5n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`basic groupBy 1`] = `
TableRep {
  "rowData": [
    {
      "Job Family": "Maintenance, Vehicle & Facilities",
      "TCOE": 123432n,
      "Title": "Vehicle Inspector",
    },
    {
      "Job Family": "Police",
      "TCOE": 127660n,
      "Title": "Revenue Protection Guard",
    },
    {
      "Job Family": "Maintenance, Vehicle & Facilities",
      "TCOE": 104260n,
      "Title": "Transit Vehicle Mechanic",
    },
    {
      "Job Family": "Transportation Operations",
      "TCOE": 352988n,
      "Title": "Station Agent",
    },
    {
      "Job Family": "Maintenance, Vehicle & Facilities",
      "TCOE": 124962n,
      "Title": "Structures Inspector",
    },
    {
      "Job Family": "Executive Management",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
    },
    {
      "Job Family": "Engineering & Systems Engineering",
      "TCOE": 212535n,
      "Title": "Group Manager Systems Capital Prog",
    },
    {
      "Job Family": "Legal & Paralegal",
      "TCOE": 321543n,
      "Title": "General Counsel",
    },
    {
      "Job Family": "Public Affairs & Marketing",
      "TCOE": 181955n,
      "Title": "Department Manager Gov't & Comm Rel",
    },
    {
      "Job Family": "Executive Management",
      "TCOE": 819582n,
      "Title": "General Manager",
    },
    {
      "Job Family": "Engineering & Systems Engineering",
      "TCOE": 209709n,
      "Title": "Group Manager, Capital Projects",
    },
    {
      "Job Family": "Safety",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
    },
    {
      "Job Family": "Maintenance, Vehicle & Facilities",
      "TCOE": 113775n,
      "Title": "Electrician",
    },
    {
      "Job Family": "Transportation Operations",
      "TCOE": 238211n,
      "Title": "Chief Transportation Officer",
    },
    {
      "Job Family": "Maintenance, Vehicle & Facilities",
      "TCOE": 128332n,
      "Title": "Wayside Inspector",
    },
    {
      "Job Family": "Transportation Operations",
      "TCOE": 118799n,
      "Title": "Train Operator",
    },
    {
      "Job Family": "Finance & Accounting",
      "TCOE": 287139n,
      "Title": "Controller-Treasurer",
    },
    {
      "Job Family": "Executive Management",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
    },
    {
      "Job Family": "Legal & Paralegal",
      "TCOE": 445028n,
      "Title": "Senior Attorney",
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Job Family",
      "Title",
      "TCOE",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`basic project operator 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 238269n,
      "Job Family": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543n,
      "Title": "General Counsel",
      "Union": "Non-Represented",
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
    {
      "Base": 208744n,
      "Job Family": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139n,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
    {
      "Base": 170383n,
      "Job Family": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211n,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
    },
    {
      "Base": 165470n,
      "Job Family": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    {
      "Base": 160289n,
      "Job Family": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    {
      "Base": 157300n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709n,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
    },
    {
      "Base": 152434n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535n,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
    },
    {
      "Base": 152125n,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332n,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962n,
      "Title": "Structures Inspector",
      "Union": "SEIU",
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432n,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
    },
    {
      "Base": 75701n,
      "Job Family": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660n,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
    },
    {
      "Base": 74068n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260n,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
    },
    {
      "Base": 61184n,
      "Job Family": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799n,
      "Title": "Train Operator",
      "Union": "ATU",
    },
    {
      "Base": 130035n,
      "Job Family": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955n,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
    },
    {
      "Base": 60790n,
      "Job Family": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030n,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    {
      "Base": 60781n,
      "Job Family": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854n,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    {
      "Base": 60771n,
      "Job Family": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104n,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    {
      "Base": 59817n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775n,
      "Title": "Electrician",
      "Union": "SEIU",
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
    },
    "columns": [
      "Job Family",
      "Title",
      "Union",
      "Name",
      "Base",
      "TCOE",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`basic sort 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 0n,
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_rid": 5n,
    },
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 1n,
    },
    {
      "Base": 152125n,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_rid": 11n,
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_rid": 3n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`chained extend 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 0n,
    },
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 1n,
    },
    {
      "Base": 238269n,
      "Job Family": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543n,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 2n,
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 3n,
    },
    {
      "Base": 208744n,
      "Job Family": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139n,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 4n,
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 5n,
    },
    {
      "Base": 170383n,
      "Job Family": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211n,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 6n,
    },
    {
      "Base": 165470n,
      "Job Family": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 7n,
    },
    {
      "Base": 160289n,
      "Job Family": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 8n,
    },
    {
      "Base": 157300n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709n,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 9n,
    },
    {
      "Base": 152434n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535n,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 10n,
    },
    {
      "Base": 152125n,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 11n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332n,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
      "_rid": 12n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962n,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
      "_rid": 13n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432n,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
      "_rid": 14n,
    },
    {
      "Base": 75701n,
      "Job Family": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660n,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_depth": 0,
      "_pivot": null,
      "_rid": 15n,
    },
    {
      "Base": 74068n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260n,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
      "_rid": 16n,
    },
    {
      "Base": 61184n,
      "Job Family": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799n,
      "Title": "Train Operator",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
      "_rid": 17n,
    },
    {
      "Base": 130035n,
      "Job Family": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955n,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
      "_rid": 18n,
    },
    {
      "Base": 60790n,
      "Job Family": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
      "_rid": 19n,
    },
    {
      "Base": 60781n,
      "Job Family": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
      "_rid": 20n,
    },
    {
      "Base": 60771n,
      "Job Family": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
      "_rid": 21n,
    },
    {
      "Base": 59817n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775n,
      "Title": "Electrician",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
      "_rid": 22n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_depth": {
        "columnType": "INTEGER",
        "displayName": "_depth",
      },
      "_pivot": {
        "columnType": "VARCHAR",
        "displayName": "_pivot",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
      "_pivot",
      "_depth",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`compound key sort 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 1n,
    },
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 0n,
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_rid": 3n,
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_rid": 5n,
    },
    {
      "Base": 152125n,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_rid": 11n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`extend with binary expression col 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "Overhead": 87460n,
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 0n,
    },
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "Overhead": 120961n,
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 1n,
    },
    {
      "Base": 238269n,
      "Job Family": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "Overhead": 83274n,
      "TCOE": 321543n,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_rid": 2n,
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "Overhead": 75513n,
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_rid": 3n,
    },
    {
      "Base": 208744n,
      "Job Family": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "Overhead": 78395n,
      "TCOE": 287139n,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_rid": 4n,
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "Overhead": 74634n,
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_rid": 5n,
    },
    {
      "Base": 170383n,
      "Job Family": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "Overhead": 67828n,
      "TCOE": 238211n,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_rid": 6n,
    },
    {
      "Base": 165470n,
      "Job Family": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "Overhead": 58875n,
      "TCOE": 224345n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 7n,
    },
    {
      "Base": 160289n,
      "Job Family": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "Overhead": 60394n,
      "TCOE": 220683n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 8n,
    },
    {
      "Base": 157300n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "Overhead": 52409n,
      "TCOE": 209709n,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_rid": 9n,
    },
    {
      "Base": 152434n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "Overhead": 60101n,
      "TCOE": 212535n,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_rid": 10n,
    },
    {
      "Base": 152125n,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "Overhead": 59816n,
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_rid": 11n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "Overhead": 50886n,
      "TCOE": 128332n,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_rid": 12n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "Overhead": 47516n,
      "TCOE": 124962n,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_rid": 13n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "Overhead": 45986n,
      "TCOE": 123432n,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_rid": 14n,
    },
    {
      "Base": 75701n,
      "Job Family": "Police",
      "Name": "Ornellas, Robert",
      "Overhead": 51959n,
      "TCOE": 127660n,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_rid": 15n,
    },
    {
      "Base": 74068n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "Overhead": 30192n,
      "TCOE": 104260n,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_rid": 16n,
    },
    {
      "Base": 61184n,
      "Job Family": "Transportation Operations",
      "Name": "Smith, Westley",
      "Overhead": 57615n,
      "TCOE": 118799n,
      "Title": "Train Operator",
      "Union": "ATU",
      "_rid": 17n,
    },
    {
      "Base": 130035n,
      "Job Family": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "Overhead": 51920n,
      "TCOE": 181955n,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_rid": 18n,
    },
    {
      "Base": 60790n,
      "Job Family": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "Overhead": 71240n,
      "TCOE": 132030n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 19n,
    },
    {
      "Base": 60781n,
      "Job Family": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "Overhead": 45073n,
      "TCOE": 105854n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 20n,
    },
    {
      "Base": 60771n,
      "Job Family": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "Overhead": 54333n,
      "TCOE": 115104n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 21n,
    },
    {
      "Base": 59817n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "Overhead": 53958n,
      "TCOE": 113775n,
      "Title": "Electrician",
      "Union": "SEIU",
      "_rid": 22n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "Overhead": {
        "columnType": "INTEGER",
        "displayName": "Overhead",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
      "Overhead",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`extend with binary expression col and casts 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "BasePct": 0.7813068080945987,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 0n,
    },
    {
      "Base": 298700n,
      "BasePct": 0.7117649722037549,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 1n,
    },
    {
      "Base": 238269n,
      "BasePct": 0.7410175310922645,
      "Job Family": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543n,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_rid": 2n,
    },
    {
      "Base": 212647n,
      "BasePct": 0.7379476679622432,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_rid": 3n,
    },
    {
      "Base": 208744n,
      "BasePct": 0.7269789196173282,
      "Job Family": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139n,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_rid": 4n,
    },
    {
      "Base": 206914n,
      "BasePct": 0.7349155383806669,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_rid": 5n,
    },
    {
      "Base": 170383n,
      "BasePct": 0.7152608401795048,
      "Job Family": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211n,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_rid": 6n,
    },
    {
      "Base": 165470n,
      "BasePct": 0.7375693686063874,
      "Job Family": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 7n,
    },
    {
      "Base": 160289n,
      "BasePct": 0.7263314346823272,
      "Job Family": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 8n,
    },
    {
      "Base": 157300n,
      "BasePct": 0.7500870253541813,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709n,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_rid": 9n,
    },
    {
      "Base": 152434n,
      "BasePct": 0.7172183405086221,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535n,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_rid": 10n,
    },
    {
      "Base": 152125n,
      "BasePct": 0.7177705116046447,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_rid": 11n,
    },
    {
      "Base": 77446n,
      "BasePct": 0.60348159461397,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332n,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_rid": 12n,
    },
    {
      "Base": 77446n,
      "BasePct": 0.619756405947408,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962n,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_rid": 13n,
    },
    {
      "Base": 77446n,
      "BasePct": 0.6274385896688055,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432n,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_rid": 14n,
    },
    {
      "Base": 75701n,
      "BasePct": 0.5929891900360332,
      "Job Family": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660n,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_rid": 15n,
    },
    {
      "Base": 74068n,
      "BasePct": 0.7104162670247458,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260n,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_rid": 16n,
    },
    {
      "Base": 61184n,
      "BasePct": 0.5150211702118704,
      "Job Family": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799n,
      "Title": "Train Operator",
      "Union": "ATU",
      "_rid": 17n,
    },
    {
      "Base": 130035n,
      "BasePct": 0.7146547223214531,
      "Job Family": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955n,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_rid": 18n,
    },
    {
      "Base": 60790n,
      "BasePct": 0.4604256608346588,
      "Job Family": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 19n,
    },
    {
      "Base": 60781n,
      "BasePct": 0.5741965348498875,
      "Job Family": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 20n,
    },
    {
      "Base": 60771n,
      "BasePct": 0.5279660133444537,
      "Job Family": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 21n,
    },
    {
      "Base": 59817n,
      "BasePct": 0.5257481872116019,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775n,
      "Title": "Electrician",
      "Union": "SEIU",
      "_rid": 22n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "BasePct": {
        "columnType": "DOUBLE",
        "displayName": "BasePct",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
      "BasePct",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`extend with unary op round 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "BasePct": 0.7813068080945987,
      "BasePctInt": 78,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 0n,
    },
    {
      "Base": 298700n,
      "BasePct": 0.7117649722037549,
      "BasePctInt": 71,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 1n,
    },
    {
      "Base": 238269n,
      "BasePct": 0.7410175310922645,
      "BasePctInt": 74,
      "Job Family": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543n,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_rid": 2n,
    },
    {
      "Base": 212647n,
      "BasePct": 0.7379476679622432,
      "BasePctInt": 74,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_rid": 3n,
    },
    {
      "Base": 208744n,
      "BasePct": 0.7269789196173282,
      "BasePctInt": 73,
      "Job Family": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139n,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_rid": 4n,
    },
    {
      "Base": 206914n,
      "BasePct": 0.7349155383806669,
      "BasePctInt": 73,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_rid": 5n,
    },
    {
      "Base": 170383n,
      "BasePct": 0.7152608401795048,
      "BasePctInt": 72,
      "Job Family": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211n,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_rid": 6n,
    },
    {
      "Base": 165470n,
      "BasePct": 0.7375693686063874,
      "BasePctInt": 74,
      "Job Family": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 7n,
    },
    {
      "Base": 160289n,
      "BasePct": 0.7263314346823272,
      "BasePctInt": 73,
      "Job Family": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 8n,
    },
    {
      "Base": 157300n,
      "BasePct": 0.7500870253541813,
      "BasePctInt": 75,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709n,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_rid": 9n,
    },
    {
      "Base": 152434n,
      "BasePct": 0.7172183405086221,
      "BasePctInt": 72,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535n,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_rid": 10n,
    },
    {
      "Base": 152125n,
      "BasePct": 0.7177705116046447,
      "BasePctInt": 72,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_rid": 11n,
    },
    {
      "Base": 77446n,
      "BasePct": 0.60348159461397,
      "BasePctInt": 60,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332n,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_rid": 12n,
    },
    {
      "Base": 77446n,
      "BasePct": 0.619756405947408,
      "BasePctInt": 62,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962n,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_rid": 13n,
    },
    {
      "Base": 77446n,
      "BasePct": 0.6274385896688055,
      "BasePctInt": 63,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432n,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_rid": 14n,
    },
    {
      "Base": 75701n,
      "BasePct": 0.5929891900360332,
      "BasePctInt": 59,
      "Job Family": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660n,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_rid": 15n,
    },
    {
      "Base": 74068n,
      "BasePct": 0.7104162670247458,
      "BasePctInt": 71,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260n,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_rid": 16n,
    },
    {
      "Base": 61184n,
      "BasePct": 0.5150211702118704,
      "BasePctInt": 52,
      "Job Family": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799n,
      "Title": "Train Operator",
      "Union": "ATU",
      "_rid": 17n,
    },
    {
      "Base": 130035n,
      "BasePct": 0.7146547223214531,
      "BasePctInt": 71,
      "Job Family": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955n,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_rid": 18n,
    },
    {
      "Base": 60790n,
      "BasePct": 0.4604256608346588,
      "BasePctInt": 46,
      "Job Family": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 19n,
    },
    {
      "Base": 60781n,
      "BasePct": 0.5741965348498875,
      "BasePctInt": 57,
      "Job Family": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 20n,
    },
    {
      "Base": 60771n,
      "BasePct": 0.5279660133444537,
      "BasePctInt": 53,
      "Job Family": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 21n,
    },
    {
      "Base": 59817n,
      "BasePct": 0.5257481872116019,
      "BasePctInt": 53,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775n,
      "Title": "Electrician",
      "Union": "SEIU",
      "_rid": 22n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "BasePct": {
        "columnType": "DOUBLE",
        "displayName": "BasePct",
      },
      "BasePctInt": {
        "columnType": "DOUBLE",
        "displayName": "BasePctInt",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
      "BasePct",
      "BasePctInt",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`getSourceInfo basics 1`] = `
{
  "displayName": ":memory:",
  "id": ":memory:",
  "isContainer": true,
  "kind": "Database",
}
`;

exports[`null const extend 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 0n,
    },
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 1n,
    },
    {
      "Base": 238269n,
      "Job Family": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543n,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 2n,
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 3n,
    },
    {
      "Base": 208744n,
      "Job Family": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139n,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 4n,
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 5n,
    },
    {
      "Base": 170383n,
      "Job Family": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211n,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 6n,
    },
    {
      "Base": 165470n,
      "Job Family": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 7n,
    },
    {
      "Base": 160289n,
      "Job Family": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 8n,
    },
    {
      "Base": 157300n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709n,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 9n,
    },
    {
      "Base": 152434n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535n,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 10n,
    },
    {
      "Base": 152125n,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 11n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332n,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_pivot": null,
      "_rid": 12n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962n,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_pivot": null,
      "_rid": 13n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432n,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_pivot": null,
      "_rid": 14n,
    },
    {
      "Base": 75701n,
      "Job Family": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660n,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_pivot": null,
      "_rid": 15n,
    },
    {
      "Base": 74068n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260n,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_pivot": null,
      "_rid": 16n,
    },
    {
      "Base": 61184n,
      "Job Family": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799n,
      "Title": "Train Operator",
      "Union": "ATU",
      "_pivot": null,
      "_rid": 17n,
    },
    {
      "Base": 130035n,
      "Job Family": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955n,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_pivot": null,
      "_rid": 18n,
    },
    {
      "Base": 60790n,
      "Job Family": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_pivot": null,
      "_rid": 19n,
    },
    {
      "Base": 60781n,
      "Job Family": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_pivot": null,
      "_rid": 20n,
    },
    {
      "Base": 60771n,
      "Job Family": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_pivot": null,
      "_rid": 21n,
    },
    {
      "Base": 59817n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775n,
      "Title": "Electrician",
      "Union": "SEIU",
      "_pivot": null,
      "_rid": 22n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_pivot": {
        "columnType": "VARCHAR",
        "displayName": "_pivot",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
      "_pivot",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`q1 - basic sqlQuery 1`] = `
TableRep {
  "rowData": [
    {
      "num": 42,
    },
  ],
  "schema": {
    "columnMetadata": {
      "num": {
        "columnType": "INTEGER",
        "displayName": "num",
      },
    },
    "columns": [
      "num",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`t1 - basic sqlite tableQuery 1`] = `
TableRep {
  "rowData": [
    {
      "_rid": 0n,
      "email": "john@doe.com",
      "firstName": "John",
      "lastName": "Doe",
      "phoneNumber": "0123456789",
    },
    {
      "_rid": 1n,
      "email": "jane@doe.com",
      "firstName": "Jane",
      "lastName": "Doe",
      "phoneNumber": "9876543210",
    },
    {
      "_rid": 2n,
      "email": "james.bond@mi6.co.uk",
      "firstName": "James",
      "lastName": "Bond",
      "phoneNumber": "0612345678",
    },
  ],
  "schema": {
    "columnMetadata": {
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
      "email": {
        "columnType": "VARCHAR",
        "displayName": "email",
      },
      "firstName": {
        "columnType": "VARCHAR",
        "displayName": "firstName",
      },
      "lastName": {
        "columnType": "VARCHAR",
        "displayName": "lastName",
      },
      "phoneNumber": {
        "columnType": "VARCHAR",
        "displayName": "phoneNumber",
      },
    },
    "columns": [
      "firstName",
      "lastName",
      "email",
      "phoneNumber",
      "_rid",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`t2 - basic bart table query 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 0n,
    },
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 1n,
    },
    {
      "Base": 238269n,
      "Job Family": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543n,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_rid": 2n,
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_rid": 3n,
    },
    {
      "Base": 208744n,
      "Job Family": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139n,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_rid": 4n,
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_rid": 5n,
    },
    {
      "Base": 170383n,
      "Job Family": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211n,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_rid": 6n,
    },
    {
      "Base": 165470n,
      "Job Family": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 7n,
    },
    {
      "Base": 160289n,
      "Job Family": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 8n,
    },
    {
      "Base": 157300n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709n,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_rid": 9n,
    },
    {
      "Base": 152434n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535n,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_rid": 10n,
    },
    {
      "Base": 152125n,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_rid": 11n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332n,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_rid": 12n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962n,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_rid": 13n,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432n,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_rid": 14n,
    },
    {
      "Base": 75701n,
      "Job Family": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660n,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_rid": 15n,
    },
    {
      "Base": 74068n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260n,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_rid": 16n,
    },
    {
      "Base": 61184n,
      "Job Family": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799n,
      "Title": "Train Operator",
      "Union": "ATU",
      "_rid": 17n,
    },
    {
      "Base": 130035n,
      "Job Family": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955n,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_rid": 18n,
    },
    {
      "Base": 60790n,
      "Job Family": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 19n,
    },
    {
      "Base": 60781n,
      "Job Family": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 20n,
    },
    {
      "Base": 60771n,
      "Job Family": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 21n,
    },
    {
      "Base": 59817n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775n,
      "Title": "Electrician",
      "Union": "SEIU",
      "_rid": 22n,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
    ],
    "dialect": "duckdb",
  },
}
`;

exports[`trivial table extend with const col 1`] = `
TableRep {
  "rowData": [
    {
      "Base": 312461n,
      "Job Family": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 0n,
      "foo": 99,
    },
    {
      "Base": 298700n,
      "Job Family": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661n,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_rid": 1n,
      "foo": 99,
    },
    {
      "Base": 238269n,
      "Job Family": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543n,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_rid": 2n,
      "foo": 99,
    },
    {
      "Base": 212647n,
      "Job Family": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160n,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_rid": 3n,
      "foo": 99,
    },
    {
      "Base": 208744n,
      "Job Family": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139n,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_rid": 4n,
      "foo": 99,
    },
    {
      "Base": 206914n,
      "Job Family": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548n,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_rid": 5n,
      "foo": 99,
    },
    {
      "Base": 170383n,
      "Job Family": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211n,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_rid": 6n,
      "foo": 99,
    },
    {
      "Base": 165470n,
      "Job Family": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 7n,
      "foo": 99,
    },
    {
      "Base": 160289n,
      "Job Family": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683n,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_rid": 8n,
      "foo": 99,
    },
    {
      "Base": 157300n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709n,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_rid": 9n,
      "foo": 99,
    },
    {
      "Base": 152434n,
      "Job Family": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535n,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_rid": 10n,
      "foo": 99,
    },
    {
      "Base": 152125n,
      "Job Family": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941n,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_rid": 11n,
      "foo": 99,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332n,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_rid": 12n,
      "foo": 99,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962n,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_rid": 13n,
      "foo": 99,
    },
    {
      "Base": 77446n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432n,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_rid": 14n,
      "foo": 99,
    },
    {
      "Base": 75701n,
      "Job Family": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660n,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_rid": 15n,
      "foo": 99,
    },
    {
      "Base": 74068n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260n,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_rid": 16n,
      "foo": 99,
    },
    {
      "Base": 61184n,
      "Job Family": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799n,
      "Title": "Train Operator",
      "Union": "ATU",
      "_rid": 17n,
      "foo": 99,
    },
    {
      "Base": 130035n,
      "Job Family": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955n,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_rid": 18n,
      "foo": 99,
    },
    {
      "Base": 60790n,
      "Job Family": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 19n,
      "foo": 99,
    },
    {
      "Base": 60781n,
      "Job Family": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 20n,
      "foo": 99,
    },
    {
      "Base": 60771n,
      "Job Family": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104n,
      "Title": "Station Agent",
      "Union": "ATU",
      "_rid": 21n,
      "foo": 99,
    },
    {
      "Base": 59817n,
      "Job Family": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775n,
      "Title": "Electrician",
      "Union": "SEIU",
      "_rid": 22n,
      "foo": 99,
    },
  ],
  "schema": {
    "columnMetadata": {
      "Base": {
        "columnType": "BIGINT",
        "displayName": "Base",
      },
      "Job Family": {
        "columnType": "VARCHAR",
        "displayName": "Job Family",
      },
      "Name": {
        "columnType": "VARCHAR",
        "displayName": "Name",
      },
      "TCOE": {
        "columnType": "BIGINT",
        "displayName": "TCOE",
      },
      "Title": {
        "columnType": "VARCHAR",
        "displayName": "Title",
      },
      "Union": {
        "columnType": "VARCHAR",
        "displayName": "Union",
      },
      "_rid": {
        "columnType": "integer",
        "displayName": "_rid",
      },
      "foo": {
        "columnType": "INTEGER",
        "displayName": "foo",
      },
    },
    "columns": [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "Job Family",
      "Union",
      "_rid",
      "foo",
    ],
    "dialect": "duckdb",
  },
}
`;
